# ai-gha

./: .gitignore  README.md  SUMMARY  pyproject.toml  setup.py
.github/workflows/: README.md  build-readme.yml  deploy-gh-pages.yml  generate-summaries.yml  test.yml  update-structure.yaml  update-structure.yml
SUMMARIES/: PYTHON.md  README_SUBs.md  READMEs.md
docs/: README.md  SUMMARY
docs/readme/: README.md  SUMMARY  base.md.j2  config.toml  todo.md
docs/readme/sections/: SUMMARY  development.md.j2  introduction.md.j2  prerequisites.md.j2  site.md.j2  structure.md.j2  todo.md.j2  usage.md.j2
docs/site/: README.md  SUMMARY  template.html
scripts/: generate_readme.py  generate_tree.py  utils.py
src/: README.md  SUMMARY
src/readme_generator/: README.md  SUMMARY  __main__.py  generators.py  utils.py
src/readme_generator/generators/: README.md  SUMMARY  __init__.py  readme_generator.py  structure.py  structure_generator.py  tree_generator.py
src/site_generator/: README.md  SUMMARY  __main__.py  generator.py
src/summary_generator/: README.md  SUMMARY  __init__.py  __main__.py  generator.py  signature_extractor.py  special_summaries.py
tests/: SUMMARY  test_generators.py  test_site_generator.py  test_summary_generator.py  test_tree_generator.py
