[project]
name = "readme-generator"
version = "0.1.0"
description = "Tools for dynamic README generation"
requires-python = ">=3.11"
dependencies = [
    "Jinja2>=3.1.2",
    "tomli>=2.0.1",
    "loguru>=0.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.readme]
features = [
    "Dynamic README generation using Jinja2 templates",
    "Modular section templates for easy maintenance",
    "Simple extension mechanism for adding new sections",
]
todo_items = [
    "Add more section templates",
    "Customize templates for your specific needs",
    "Add automated workflows for README generation",
    "Update template variables",
]
