[project]
name = "readme-generator"
version = "0.1.0"
description = "Template repository for GitHub Action-based agents with dynamic documentation"
requires-python = ">=3.11"
dependencies = [
    "Jinja2>=3.1.2",
    "tomli>=2.0.1",
    "loguru>=0.7.0",
    "fire>=0.5.0",
    "tree-format>=0.1.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.readme]
features = [
    "Modular documentation system with Jinja2 templates",
    "Automatic project structure documentation",
    "Reusable GitHub Actions workflows",
    "Centralized configuration management",
    "Utility functions for common operations",
    "Clean, maintainable architecture optimized for AI agents"
]
todo_items = [
    "Add more utility functions for common agent operations",
    "Create workflow templates for common agent tasks",
    "Expand documentation with more examples",
    "Add testing framework",
    "Add more reusable components"
]

[tool.readme.tree]
ignore_patterns = [
    "__pycache__",
    "*.pyc",
    ".git",
    ".venv",
    ".pytest_cache",
    ".vscode",
    ".idea",
    "*.egg-info",
]
show_workflows = true  # Flag to indicate if we want to show workflow files
