[project]
name = "readme-generator"
version = "0.1.0"
description = "Template repository for GitHub Action-based agents with dynamic documentation"
requires-python = ">=3.11"
dependencies = [
    "Jinja2>=3.1.2",
    "tomli>=2.0.1",
    "loguru>=0.7.0",
    "fire>=0.5.0",
    "tree-format>=0.1.2",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]
docs = [
    "markdown2>=2.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=readme_generator"

[tool.readme.tree]
ignore_patterns = [
    "__pycache__",
    "*.pyc",
    ".git",
    ".venv",
    ".pytest_cache",
    ".vscode",
    ".idea",
    "*.egg-info",
]
